style: fix overflow (#41)

--- a/apps/logo-quiz/src/styles.scss
+++ b/apps/logo-quiz/src/styles.scss
@@ -69,6 +69,16 @@ button {
 .body-inner {
   position: relative;
   height: 100%;
+  
+  &__circles {
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 
   &__bug {
     text-align: center;
